# SentrySDK_pattern

./: README.md  pyproject.toml
src/frameworks/fastapi/: REAME.md  main.py
src/frameworks/flask/: REAME.md  main.py
src/simple/: REAME.md  main.py
src/simple/helpers/: sentrySDK.py
