[tool.poetry]
name = "sentrysdk"
version = "0.1.0"
description = ""
authors = ["IgorPydata <igor.leschenko@dataacquisition.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}
loguru = "^0.7.2"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
